src/manifests/frontend/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: inference
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: frontend-manifest-generator
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/managed-by: frontend-manifest-generator
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: frontend
    spec:
      serviceAccountName: frontend-sa
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 1000
      volumes:
      - name: tmp
        emptyDir: {}
      - name: static-files
        emptyDir: {}
      containers:
      - name: frontend
        image: ghcr.io/athithya-sakthivel/frontend:2026-05-10-12-47--3ef1922@sha256:162cc2dc04d358c237207568527815409c4d3541c977169f6b6e3833d8ee6122
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: tmp
          mountPath: /var/tmp
        - name: static-files
          mountPath: /app/static
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        startupProbe:
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 12
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /orchestrator/health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 2
          successThreshold: 1
