src/manifests/frontend/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: inference
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/managed-by: frontend-manifest-generator
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: frontend
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
